<resources>
    <string name="permission_required_to_access_videos">Permission is required to access videos.</string>
    <string name="app_name">Dr Safe</string>
    <string name="wifi_name">ESP32</string>
    <string name="setting">Setting</string>
    <string name="update">Update</string>
    <string name="video_list">Videos</string>
    <string name="dvr_file">DVR File</string>
    <string name="home">Home</string>
    <string name="home_msg">If you want to link the Dr. S@fe product and the app to use the video downloader, you must start the vehicle and connect to Dr. S@fe via WiFi.</string>
    <string name="ok">ok</string>
    <string name="connection_date">Connection Date</string>
    <string name="connection_details">Connection Details</string>
    <string name="username">Username</string>
    <string name="product_registration_number">Product Reg. Number</string>
    <string name="connect_now">Connect Now</string>
    <string name="no_connection">No Connection</string>
    <string name="dvr_file_title">DVR File</string>
    <string name="normal">Normal</string>
    <string name="event">Event</string>
    <string name="search">Search</string>
    <string name="size">Size</string>
    <string name="downloaded_nvideo_list">Downloaded\nVideo List</string>
    <string name="download">Download</string>
    <string name="driving">Driving</string>
    <string name="downloading_data">Downloading Data</string>
    <string name="confirmation">Confirmation</string>
    <string name="do_you_want_to_download_the_video">Do you want to download the video?</string>
    <string name="send_sms">Send SMS</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="play">Play</string>
    <string name="delete_msg">Do you want to delete the video?</string>
    <string name="map_db_update">Map DB update</string>
    <string name="master_firmware_update">Master Firmware update</string>
    <string name="camera_firmware_update">Camera Firmware Update</string>
    <string name="db_update">DB Update</string>
    <string name="version">Version</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="update_notification">Update Notification</string>
    <string name="auto_update">Auto Update</string>
    <string name="confirm">Confirm</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="this_is_the_latest_version">This is the latest version.</string>
    <string name="user_profile">User Profile</string>
    <string name="nick_name">Nick Name</string>
    <string name="phone_number">Phone No:</string>
    <string name="dvr_options">DVR Options</string>
    <string name="wi_fi_connection">Wi-Fi Connection</string>
    <string name="ble_connection">BLE Connection</string>
    <string name="master_device">Master Device</string>
    <string name="connection">Connection</string>
    <string name="disconnected">Disconnected</string>
    <string name="camera_device">Camera Device</string>
    <string name="vehicle">Vehicle</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="register_vehicle">Register Vehicle</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="year_of_manufacture">Year Of Manufacture</string>
    <string name="please_select_a_model">Please select a model</string>
    <string name="please_select_a_brand">Please select a brand</string>
    <string name="please_select_a_fuel_type">Please select a fuel type</string>
    <string name="please_select_a_year">Please select a year</string>
    <string name="vehicle_saved">Vehicle Saved</string>
    <string name="record_time">Record Time</string>
    <string name="_10_sec">10 Sec</string>
    <string name="_20_sec">20 Sec</string>
    <string name="resolution">Resolution</string>
    <string name="_320x240">320x240</string>
    <string name="_640x480">640x480</string>
    <string name="_5_fps">5 fps</string>
    <string name="_10_fps">10 fps</string>
    <string name="_30_fps">30 fps</string>
    <string name="format_storage">Format Storage</string>
    <string name="format">Format</string>
    <string name="do_you_want_to_do_format">Do you want to do format?</string>
    <string name="okay">Okay</string>
    <string name="save">Save</string>
    <string name="format_in_progress">Format In Progress</string>
    <string name="format_complete_subtitle">Please Insert SD Card.</string>
    <string name="format_complete_title">NO SD CARD</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="wi_fi_setting">Wi-Fi Setting</string>
    <string name="ble_setting">BLE Setting</string>
    <string name="wifi_type">WPA-2</string>
    <string name="wifi_id">WiFi ID</string>
    <string name="wifi_password">WiFi Password</string>
    <string name="wifi_setting_date">WiFi Setting Date</string>
    <string name="status">Status</string>
    <string name="wi_fi_reset">Wi-Fi Reset</string>
    <string name="BLE_reset">BLE Reset</string>
    <string name="reset_wi_fi">Reset Wi-Fi</string>
    <string name="do_you_want_to_reset_your_wifi">Do you want to reset your wifi?</string>
    <string name="wifi">Wifi</string>
    <string name="connecting_your_device_to_wi_fi">Connecting your device to Wi-Fi</string>
    <string name="audio_setting">Audio Setting</string>
    <string name="sound_level">Sound Level</string>
    <string name="sound">Sound</string>
    <string name="interval">Interval</string>
    <string name="normal_frequent">Normal Frequent</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="audio_settings_saved">Audio Settings Saved.</string>
    <string name="dr_safe">Dr.S@fe</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_kakao">Login with Kakao</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_registered_yet">Not Registered yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="terms_of_register">Terms of register</string>
    <string name="i_agree_with_the_terms_of_register">I agree with the terms of register</string>
    <string name="terms_of_collecting_to_private_info">Terms of collecting to private info</string>
    <string name="i_agree_with_the_collecting_about_private_info">I agree with the collecting about private info.</string>
    <string name="information_about_the_privacy_commission">Information about the privacy commission</string>
    <string name="i_agree_with_the_information_about_the_privacy_commission">I agree with the information about the privacy commission.</string>
    <string name="i_agree_with_all_of_the_terms">I agree with all of the terms</string>
    <string name="eula_location_contents_script" translatable="false">Hanyang Informations &amp; Communications Co., Ltd. (hereafter “HYIC” or “we”) provides its websites accessible at www.adasone.com,and any other website for which HYIC owns the domain registration (the “Site”), its proprietary video viewing platform and ADAS ONE (hereafter “the Device”) made available by HYIC therein, including the “HYIC Network” (any and all of the forgoing the “Device”). Please read carefully the following terms and conditions (“Terms of Use”), Copyright Policy, Trademark Policy, and our Privacy Policy. These Terms of Use govern your access to and use of the Device and all Collective Content (defined below), and constitute a binding legal agreement between you and HYIC.Key…</string>
    <string name="dashboard">Dashboard</string>
    <string name="trips">Trips</string>
    <string name="driving_score">Events</string>
    <string name="e_call">E-call</string>
    <string name="fps">FPS</string>
</resources>