<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/layout_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSurface"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llRecordTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/generic_padding"
                android:layout_marginTop="@dimen/generic_padding"
                android:background="@drawable/update_row_bg"
                android:padding="@dimen/padding_10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/record_time"
                    android:textAppearance="@style/Theme.DrSafe.Button"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgRecordTime"
                    style="@style/Theme.DrSafe.RadioGroup.Dvr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/generic_small_padding"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/generic_padding"
                    android:paddingVertical="@dimen/generic_small_padding">

                    <RadioButton
                        android:id="@+id/rd10Sec"
                        style="@style/Theme.DrSafe.RadioButton.Dvr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/generic_small_padding"
                        android:text="@string/_10_sec" />


                    <RadioButton
                        android:id="@+id/rd15Sec"
                        style="@style/Theme.DrSafe.RadioButton.Dvr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:gravity="center"
                        android:padding="@dimen/generic_small_padding"
                        android:text="@string/_20_sec" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llResolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/generic_padding"
                android:layout_marginTop="@dimen/generic_padding"
                android:background="@drawable/update_row_bg"
                android:padding="@dimen/padding_10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/resolution"
                    android:textAppearance="@style/Theme.DrSafe.Button"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgResolution"
                    style="@style/Theme.DrSafe.RadioGroup.Dvr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/generic_small_padding"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/generic_padding"
                    android:paddingVertical="@dimen/generic_small_padding">

                    <RadioButton
                        android:id="@+id/rd320x240"
                        style="@style/Theme.DrSafe.RadioButton.Dvr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:gravity="center"
                        android:padding="@dimen/generic_small_padding"
                        android:text="@string/_320x240" />


                    <RadioButton
                        android:id="@+id/rd_640x480"
                        style="@style/Theme.DrSafe.RadioButton.Dvr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/generic_small_padding"
                        android:text="@string/_640x480" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/generic_padding"
                android:layout_marginTop="@dimen/generic_padding"
                android:background="@drawable/update_row_bg"
                android:padding="@dimen/padding_10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/fps"
                    android:textAppearance="@style/Theme.DrSafe.Button"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rgFps"
                    style="@style/Theme.DrSafe.RadioGroup.Dvr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/generic_small_padding"
                    android:layout_weight="0.5"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/generic_padding"
                    android:paddingVertical="@dimen/generic_small_padding">




                    <RadioButton
                        android:id="@+id/rd10fps"
                        style="@style/Theme.DrSafe.RadioButton.Dvr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:checked="true"
                        android:padding="@dimen/generic_small_padding"
                        android:text="@string/_10_fps" />

                    <RadioButton
                        android:id="@+id/rd15fps"
                        style="@style/Theme.DrSafe.RadioButton.Dvr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="@dimen/generic_small_padding"
                        android:text="@string/_30_fps" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFormat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="@dimen/generic_padding"
                android:layout_marginTop="@dimen/generic_padding"
                android:background="@drawable/update_row_bg"
                android:padding="@dimen/padding_10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/format"
                    android:textAppearance="@style/Theme.DrSafe.Button"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/generic_btn_bg"
                    android:backgroundTint="@color/colorCritical"
                    android:minWidth="140dp"
                    android:minHeight="32dp"
                    android:padding="@dimen/generic_padding"
                    android:text="@string/format_storage"
                    android:textAppearance="@style/Theme.DrSafe.caption1"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/generic_padding"
                android:background="@drawable/generic_btn_bg"
                android:text="@string/save"
                android:textAppearance="@style/Theme.DrSafe.Button"
                android:textStyle="bold"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/generic_padding"
                android:layout_marginBottom="@dimen/generic_padding"
                android:textAppearance="@style/Theme.DrSafe.Button"
                android:textStyle="bold"
                android:background="@drawable/outline_btn_bg"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</layout>
